Add Navigation bar and Header section

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   </head>
   <body>
     <div class="wrapper">
-      <section class="top-section">
+      <div class="top-section">
         <nav class="nav-bar">
           <ul class="logo-box">
-            <li>My logo</li>
+            <li>My Logo</li>
           </ul>
           <ul class="links-box">
             <li>Portfolio</li>
@@ -28,7 +28,7 @@
             <li>☰</li>
           </ul>
         </nav>
-      </section>
+      </div>
       <section class="second-section-container">
         <div class="second-section">
           <h1>I'am Henry</h1>
@@ -50,7 +50,7 @@
         </div>
       </section>
 
-      <section class="third-section">
+      <!-- <section class="third-section">
         <div>
           <div>Aterto</div>
           <div><i class="fa fa-lock"></i>Miglena Tadic <img src="/assets/images/one.png" alt="Author's Profile"></div>
@@ -76,7 +76,7 @@
           </ul>
         </div>
         <div></div>
-      </section>
+      </section> -->
     </div>
   </body>
 </html>
