--- a/index.html
+++ b/index.html
@@ -3,80 +3,45 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Henry Kc Portfolio</title>
+    <title>Henry's Portfolio</title>
     <link rel="stylesheet" href="/css/styles.css" />
     <link
       rel="stylesheet"
-      href="path/to/font-awesome/css/font-awesome.min.css"
+      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+      integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+      crossorigin="anonymous"
     />
-    <script src="https://use.fontawesome.com/b798443c7d.js"></script>
   </head>
   <body>
     <div class="wrapper">
-      <div class="top-section">
-        <nav class="nav-bar">
-          <ul class="logo-box">
-            <li>My Logo</li>
-          </ul>
-          <ul class="links-box">
-            <li>Portfolio</li>
-            <li>About</li>
-            <li>Contacts</li>
-          </ul>
-
-          <ul class="menu-box">
-            <li>☰</li>
-          </ul>
-        </nav>
-      </div>
-      <section class="second-section-container">
-        <div class="second-section">
-          <h1>I'am Henry</h1>
-          <h1>Glad to see you!</h1>
-          <p>
-            I’m a software developer! I can help you build a product , feature
-            or website Look through some of my work and experience! If you like
-            what you see and have a project you need coded, don’t hestiate to
-            contact me.
-          </p>
-          <p>LET’S CONNECT</p>
-          <ul class="social-container">
-            <li><i class="fa fa-twitter"></i></li>
-            <li><i class="fa fa-github"></i></li>
-            <li><i class="fa fa-linkedin"></i></li>
-            <li><i class="fa fa-instagram"></i></li>
-            <li><i class="fa fa-facebook"></i></li>
-          </ul>
+      <section class="header">
+        <div class="top-section">
+          <nav class="nav-bar">
+            <p class="logo-box">My Portfolio</p>
+            <span><i class="fas fa-bars"></i></span>
+          </nav>
         </div>
+        <section class="second-section-container">
+          <div class="second-section">
+            <p>I'am Mariane</p>
+            <p>Glad to see<br /> you!</p>
+            <p>
+              I’m a software developer! I can help you build a product , feature
+              or website Look through some of my work and experience! If you
+              like what you see and have a project you need coded, don’t
+              hestiate to contact me.
+            </p>
+            <p class="connect">LET’S CONNECT</p>
+            <ul class="social-container">
+              <li><i class="fab fa-twitter"></i></li>
+              <li><i class="fab fa-linkedin-in"></i></li>
+              <li><i class="fab fa-github"></i></li>
+              <li><i class="fab fa-facebook"></i></li>
+              <li><i class="fab fa-instagram"></i></li>
+            </ul>
+          </div>
+        </section>
       </section>
-
-      <!-- <section class="third-section">
-        <div>
-          <div>Aterto</div>
-          <div><i class="fa fa-lock"></i>Miglena Tadic <img src="/assets/images/one.png" alt="Author's Profile"></div>
-        </div>
-        <div>
-          <div>
-            <h1>Nature</h1>
-            <p>Catchy look inpiring bionic form</p>
-            <p>$<span>35</span></p>
-          </div>
-          <div>
-            <img src="/assets/images/one.png" alt="">
-          </div>
-          <ul>
-            <li>Pattern</li>
-            <li>Poster</li>
-            <li>Abstraction</li>
-            <li>People</li>
-            <li>Technology</li>
-            <li>Media</li>
-            <li>Nature</li>
-            <li>Food</li>
-          </ul>
-        </div>
-        <div></div>
-      </section> -->
     </div>
   </body>
 </html>
