Correct some implementations as per review

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Henry's Portfolio</title>
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="/styles.css" />
     <link
       rel="stylesheet"
       href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
@@ -23,7 +23,7 @@
         </div>
         <section class="second-section-container">
           <div class="second-section">
-            <p>I'am Mariane</p>
+            <p>I'am Henry</p>
             <p>Glad to see<br /> you!</p>
             <p>
               I’m a software developer! I can help you build a product , feature
