Make changes as per the second review

--- a/index.html
+++ b/index.html
@@ -11,20 +11,26 @@
       integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   </head>
   <body>
-    <div class="wrapper">
-      <section class="header">
-        <div class="top-section">
+    <main class="wrapper">
+  <section class="header">
+        <section class="top-section">
           <nav class="nav-bar">
-            <p class="logo-box">My Portfolio</p>
+            <p class="logo-box"><a href="#">My Portfolio</a></p>
             <span><i class="fas fa-bars"></i></span>
           </nav>
-        </div>
+        </section>
         <section class="second-section-container">
-          <div class="second-section">
+          <section class="second-section">
             <p>I'am Henry</p>
-            <p>Glad to see<br /> you!</p>
+            <p>
+              Glad to see<br />
+              you!
+            </p>
             <p>
               I’m a software developer! I can help you build a product , feature
               or website Look through some of my work and experience! If you
@@ -39,9 +45,9 @@
               <li><i class="fab fa-facebook"></i></li>
               <li><i class="fab fa-instagram"></i></li>
             </ul>
-          </div>
+          </section>
         </section>
       </section>
-    </div>
+    </main>
   </body>
 </html>
