Implement Works sections

--- a/index.html
+++ b/index.html
@@ -5,16 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Henry's Portfolio</title>
     <link rel="stylesheet" href="./styles.css" />
+
+    <!-- Fontawesome CDN -->
     <link
       rel="stylesheet"
       href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
       integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
       crossorigin="anonymous"
     />
+
+    <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;1,700&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -27,6 +38,7 @@
             <span><i class="fas fa-bars"></i></span>
           </nav>
         </section>
+
         <section class="second-section-container">
           <section class="second-section">
             <p>I'am Henry</p>
@@ -51,6 +63,125 @@
           </section>
         </section>
       </section>
+
+      <section class="projects">
+        <section class="project">
+          <section class="project-image">
+            <img
+              src="./assets/images/project1.png"
+              alt="My first project snapshot"
+            />
+          </section>
+          <section class="project-name">Tonic</section>
+          <section class="project-year">
+            <span class="canopy">CANOPY</span>
+            <span class="dot"></span>
+            <span class="role">Back End Dev</span>
+            <span class="dot"></span>
+            <span class="role">2015</span>
+          </section>
+          <section class="project-description">
+            A daily selection of privately personalized reads; no accounts or
+            sign-ups required.
+          </section>
+          <section class="project-technologies">
+            <span>HTML</span>
+            <span>CSS</span>
+            <span>JavaScript</span>
+          </section>
+          <button type="button" class="project-button">See Project</button>
+        </section>
+      </section>
+
+      <section class="projects">
+        <section class="project">
+          <section class="project-image">
+            <img
+              src="./assets/images/project2.png"
+              alt="My first project snapshot"
+            />
+          </section>
+          <section class="project-name">Multi-Post Stories</section>
+          <section class="project-year">
+            <span class="canopy">CANOPY</span>
+            <span class="dot"></span>
+            <span class="role">Back End Dev</span>
+            <span class="dot"></span>
+            <span class="role">2015</span>
+          </section>
+          <section class="project-description">
+            A daily selection of privately personalized reads; no accounts or
+            sign-ups required.
+          </section>
+          <section class="project-technologies">
+            <span>HTML</span>
+            <span>CSS</span>
+            <span>JavaScript</span>
+          </section>
+          <button type="button" class="project-button">See Project</button>
+        </section>
+      </section>
+
+      <section class="projects">
+        <section class="project">
+          <section class="project-image">
+            <img
+              src="./assets/images/project3.png"
+              alt="My first project snapshot"
+            />
+          </section>
+          <section class="project-name">Tonic</section>
+          <section class="project-year">
+            <span class="canopy">CANOPY</span>
+            <span class="dot"></span>
+            <span class="role">Back End Dev</span>
+            <span class="dot"></span>
+            <span class="role">2015</span>
+          </section>
+          <section class="project-description">
+            A daily selection of privately personalized reads; no accounts or
+            sign-ups required.
+          </section>
+          <section class="project-technologies">
+            <span>HTML</span>
+            <span>CSS</span>
+            <span>JavaScript</span>
+          </section>
+          <button type="button" class="project-button">See Project</button>
+        </section>
+      </section>
+
+      <section class="projects">
+        <section class="project">
+          <section class="project-image">
+            <img
+              src="./assets/images/project4.png"
+              alt="My first project snapshot"
+            />
+          </section>
+          <section class="project-name">Multi-Post Stories</section>
+          <section class="project-year">
+            <span class="canopy">CANOPY</span>
+            <span class="dot"></span>
+            <span class="role">Back End Dev</span>
+            <span class="dot"></span>
+            <span class="role">2015</span>
+          </section>
+          <section class="project-description">
+            A daily selection of privately personalized reads; no accounts or
+            sign-ups required.
+          </section>
+          <section class="project-technologies">
+            <span>HTML</span>
+            <span>CSS</span>
+            <span>JavaScript</span>
+          </section>
+          <button type="button" class="project-button">See Project</button>
+        </section>
+      </section>
+
+      <section class="about"></section>
+
     </main>
   </body>
 </html>
