Add Works section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;1,700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;1,700;1,900&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -34,14 +34,14 @@
       <section class="header">
         <section class="top-section">
           <nav class="nav-bar">
-            <p class="logo-box"><a href="#">My Portfolio</a></p>
+            <p class="logo-box"><a href="#">My Logo</a></p>
             <span><i class="fas fa-bars"></i></span>
           </nav>
         </section>
 
         <section class="second-section-container">
           <section class="second-section">
-            <p>I'am Henry</p>
+            <p>I'm Henry</p>
             <p>
               Glad to see<br />
               you!
@@ -54,11 +54,11 @@
             </p>
             <p class="connect">LET’S CONNECT</p>
             <ul class="social-container">
-              <li><i class="fab fa-twitter"></i></li>
-              <li><i class="fab fa-linkedin-in"></i></li>
               <li><i class="fab fa-github"></i></li>
-              <li><i class="fab fa-facebook"></i></li>
-              <li><i class="fab fa-instagram"></i></li>
+              <li><i class="fab fa-linkedin-in"></i></li>
+              <li><i class="fab fa-angellist"></i></li>
+              <li><i class="fab fa-twitter"></i></li>
+              <li><i class="fab fa-medium-m"></i></li>
             </ul>
           </section>
         </section>
@@ -180,8 +180,89 @@
         </section>
       </section>
 
-      <section class="about"></section>
+      <section class="about">
+        <section class="about-intro-section">
+          <p>About<br />Myself</p>
+          <p>
+            Hello I’m a software developer! I can help you build a product ,
+            feature or website Look through some of my work and experience! If
+            you like what you see and have a project you need coded, don’t
+            hestiate to contact me.
+          </p>
+          <p class="connect-about">LET’S CONNECT</p>
+          <ul class="social-container-about">
+            <li><i class="fab fa-github"></i></li>
+            <li><i class="fab fa-linkedin-in"></i></li>
+            <li><i class="fab fa-angellist"></i></li>
+            <li><i class="fab fa-twitter"></i></li>
+            <li><i class="fab fa-medium-m"></i></li>
+          </ul>
+        </section>
 
+        <button class="project-button" type="button">Get my resume</button>
+
+        <section class="langs-frames-skills">
+          <section class="lang-and-icon">
+            <span>Languages</span>
+            <span><i class="far fa-chevron-down"></i></span>
+          </section>
+
+          <section class="lang-list">
+            <section class="lang">
+              <img
+                src="./assets/images/js.png"
+                alt="Javascript Logo"
+                class="lang-logo"
+              />
+              <span class="js">JavaScript</span>
+            </section>
+
+            <section class="lang">
+              <img
+                src="./assets/images/html.png"
+                alt="HTLM Logo"
+                class="lang-logo"
+              />
+              <span class="html">HTML</span>
+            </section>
+
+            <section class="lang">
+              <img
+                src="./assets/images/css.png"
+                alt="CSS Logo"
+                class="lang-logo"
+              />
+              <span class="css">CSS</span>
+            </section>
+          </section>
+        </section>
+        <section class="lang-and-icon frames-and-icon">
+          <span>Frameworks</span>
+          <span><i class="far fa-chevron-right"></i></span>
+        </section>
+
+        <section class="lang-and-icon skills-and-icon">
+          <span>Skills</span>
+          <span><i class="far fa-chevron-right"></i></span>
+        </section>
+      </section>
+
+      <section class="contact-wrapper">
+        <section class="contact">
+          <p>Contact me</p>
+          <p>
+            If you have an application you are interested in developing, a
+            feature that you need built or a project that needs coding. I’d love
+            to help with it
+          </p>
+          <input type="text" class="name" name="name" placeholder="Name" />
+          <input type="email" class="email" name="email" placeholder="Email" />
+          <textarea name="message" id="msg" cols="30" rows="10" class="msg">
+Write your message here</textarea
+          >
+          <button type="button" class="project-button send">Get in Touch</button>
+        </section>
+      </section>
     </main>
   </body>
 </html>
