Redo languages, framework and skills part

--- a/index.html
+++ b/index.html
@@ -201,50 +201,53 @@
 
         <button class="project-button" type="button">Get my resume</button>
 
-        <section class="langs-frames-skills">
-          <section class="lang-and-icon">
-            <span>Languages</span>
-            <span><i class="far fa-chevron-down"></i></span>
-          </section>
-
-          <section class="lang-list">
-            <section class="lang">
-              <img
-                src="./assets/images/js.png"
-                alt="Javascript Logo"
-                class="lang-logo"
-              />
-              <span class="js">JavaScript</span>
+        <ul class="tech-stacks">
+          <li class="langs-frames-skills">
+            <section class="lang-and-icon">
+              <span>Languages</span>
+              <span><i class="far fa-chevron-down"></i></span>
             </section>
 
-            <section class="lang">
-              <img
-                src="./assets/images/html.png"
-                alt="HTLM Logo"
-                class="lang-logo"
-              />
-              <span class="html">HTML</span>
-            </section>
+            <section class="lang-list">
+              <section class="lang">
+                <img
+                  src="./assets/images/js.png"
+                  alt="Javascript Logo"
+                  class="lang-logo"
+                />
+                <span class="js">JavaScript</span>
+              </section>
 
-            <section class="lang">
-              <img
-                src="./assets/images/css.png"
-                alt="CSS Logo"
-                class="lang-logo"
-              />
-              <span class="css">CSS</span>
-            </section>
-          </section>
-        </section>
-        <section class="lang-and-icon frames-and-icon">
-          <span>Frameworks</span>
-          <span><i class="far fa-chevron-right"></i></span>
-        </section>
+              <section class="lang">
+                <img
+                  src="./assets/images/html.png"
+                  alt="HTLM Logo"
+                  class="lang-logo"
+                />
+                <span class="html">HTML</span>
+              </section>
 
-        <section class="lang-and-icon skills-and-icon">
-          <span>Skills</span>
-          <span><i class="far fa-chevron-right"></i></span>
-        </section>
+              <section class="lang">
+                <img
+                  src="./assets/images/css.png"
+                  alt="CSS Logo"
+                  class="lang-logo"
+                />
+                <span class="css">CSS</span>
+              </section>
+            </section>
+          </li>
+
+          <li class="lang-and-icon frames-and-icon">
+            <span>Frameworks</span>
+            <span><i class="far fa-chevron-right"></i></span>
+          </li>
+
+          <li class="lang-and-icon skills-and-icon">
+            <span>Skills</span>
+            <span><i class="far fa-chevron-right"></i></span>
+          </li>
+        </ul>
       </section>
 
       <section class="contact-wrapper">
@@ -260,7 +263,9 @@
           <textarea name="message" id="msg" cols="30" rows="10" class="msg">
 Write your message here</textarea
           >
-          <button type="button" class="project-button send">Get in Touch</button>
+          <button type="button" class="project-button send">
+            Get in Touch
+          </button>
         </section>
       </section>
     </main>
