Changed some codes as per the review

--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
             </p>
             <p class="connect">LET’S CONNECT</p>
             <ul class="social-container">
-              <li><i class="fab fa-github"></i></li>
-              <li><i class="fab fa-linkedin-in"></i></li>
-              <li><i class="fab fa-angellist"></i></li>
               <li><i class="fab fa-twitter"></i></li>
+              <li><i class="fab fa-linkedin-in"></i></li>
               <li><i class="fab fa-medium-m"></i></li>
+              <li><i class="fab fa-github"></i></li>
+              <li><i class="fab fa-angellist"></i></li>
             </ul>
           </section>
         </section>
@@ -72,24 +72,28 @@
               alt="My first project snapshot"
             />
           </section>
-          <section class="project-name">Tonic</section>
-          <section class="project-year">
-            <span class="canopy">CANOPY</span>
-            <span class="dot"></span>
-            <span class="role">Back End Dev</span>
-            <span class="dot"></span>
-            <span class="role">2015</span>
-          </section>
+          <h1 class="project-name">Tonic</h1>
+          <ul class="project-year">
+            <li class="canopy">CANOPY</li>
+            <li class="dot"></li>
+            <li class="role">Back End Dev</li>
+            <li class="dot"></li>
+            <li class="role">2015</li>
+          </ul>
           <section class="project-description">
-            A daily selection of privately personalized reads; no accounts or
-            sign-ups required.
+            <p>
+              A daily selection of privately personalized reads; no accounts or
+              sign-ups required.
+            </p>
           </section>
-          <section class="project-technologies">
-            <span>HTML</span>
-            <span>CSS</span>
-            <span>JavaScript</span>
-          </section>
-          <button type="button" class="project-button">See Project</button>
+          <ul class="project-technologies">
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+          </ul>
+          <a href="#">
+            <button type="button" class="project-button">See Project</button>
+          </a>
         </section>
       </section>
 
@@ -101,24 +105,28 @@
               alt="My first project snapshot"
             />
           </section>
-          <section class="project-name">Multi-Post Stories</section>
-          <section class="project-year">
-            <span class="canopy">CANOPY</span>
-            <span class="dot"></span>
-            <span class="role">Back End Dev</span>
-            <span class="dot"></span>
-            <span class="role">2015</span>
-          </section>
+          <h1 class="project-name">Multi-Post Stories</h1>
+          <ul class="project-year">
+            <li class="canopy">CANOPY</li>
+            <li class="dot"></li>
+            <li class="role">Back End Dev</li>
+            <li class="dot"></li>
+            <li class="role">2015</li>
+          </ul>
           <section class="project-description">
-            A daily selection of privately personalized reads; no accounts or
-            sign-ups required.
+            <p>
+              A daily selection of privately personalized reads; no accounts or
+              sign-ups required.
+            </p>
           </section>
-          <section class="project-technologies">
-            <span>HTML</span>
-            <span>CSS</span>
-            <span>JavaScript</span>
-          </section>
-          <button type="button" class="project-button">See Project</button>
+          <ul class="project-technologies">
+            <li>HTML</li>
+            <li>CSS</span>
+            <li>JavaScript</li>
+          </ul>
+          <a href="#">
+            <button type="button" class="project-button">See Project</button>
+          </a>
         </section>
       </section>
 
@@ -130,24 +138,28 @@
               alt="My first project snapshot"
             />
           </section>
-          <section class="project-name">Tonic</section>
-          <section class="project-year">
-            <span class="canopy">CANOPY</span>
-            <span class="dot"></span>
-            <span class="role">Back End Dev</span>
-            <span class="dot"></span>
-            <span class="role">2015</span>
-          </section>
+          <h1 class="project-name">Tonic</h1>
+          <ul class="project-year">
+            <li class="canopy">CANOPY</li>
+            <li class="dot"></li>
+            <li class="role">Back End Dev</li>
+            <li class="dot"></li>
+            <li class="role">2015</li>
+          </ul>
           <section class="project-description">
-            A daily selection of privately personalized reads; no accounts or
-            sign-ups required.
+            <p>
+              A daily selection of privately personalized reads; no accounts or
+              sign-ups required.
+            </p>
           </section>
-          <section class="project-technologies">
-            <span>HTML</span>
-            <span>CSS</span>
-            <span>JavaScript</span>
-          </section>
-          <button type="button" class="project-button">See Project</button>
+          <ul class="project-technologies">
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+          </ul>
+          <a href="#">
+            <button type="button" class="project-button">See Project</button>
+          </a>
         </section>
       </section>
 
@@ -159,24 +171,28 @@
               alt="My first project snapshot"
             />
           </section>
-          <section class="project-name">Multi-Post Stories</section>
-          <section class="project-year">
-            <span class="canopy">CANOPY</span>
-            <span class="dot"></span>
-            <span class="role">Back End Dev</span>
-            <span class="dot"></span>
-            <span class="role">2015</span>
-          </section>
+          <h1 class="project-name">Multi-Post Stories</h1>
+          <ul class="project-year">
+            <li class="canopy">CANOPY</sliplian>
+            <li class="dot"></li>
+            <li class="role">Back End Dev</li>
+            <li class="dot"></li>
+            <li class="role">2015</li>
+          </ul>
           <section class="project-description">
-            A daily selection of privately personalized reads; no accounts or
-            sign-ups required.
+            <p>
+              A daily selection of privately personalized reads; no accounts or
+              sign-ups required.
+            </p>
           </section>
-          <section class="project-technologies">
-            <span>HTML</span>
-            <span>CSS</span>
-            <span>JavaScript</span>
-          </section>
-          <button type="button" class="project-button">See Project</button>
+          <ul class="project-technologies">
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+          </ul>
+          <a href="#">
+            <button type="button" class="project-button">See Project</button>
+          </a>
         </section>
       </section>
 
@@ -198,8 +214,9 @@
             <li><i class="fab fa-medium-m"></i></li>
           </ul>
         </section>
-
-        <button class="project-button" type="button">Get my resume</button>
+        <a href="#">
+          <button class="project-button" type="button">Get my resume</button>
+        </a>
 
         <ul class="tech-stacks">
           <li class="langs-frames-skills">
@@ -239,12 +256,12 @@
           </li>
 
           <li class="lang-and-icon frames-and-icon">
-            <span>Frameworks</span>
+            <span class="frame">Frameworks</span>
             <span><i class="far fa-chevron-right"></i></span>
           </li>
 
           <li class="lang-and-icon skills-and-icon">
-            <span>Skills</span>
+            <span class="skill">Skills</span>
             <span><i class="far fa-chevron-right"></i></span>
           </li>
         </ul>
@@ -263,9 +280,11 @@
           <textarea name="message" id="msg" cols="30" rows="10" class="msg">
 Write your message here</textarea
           >
-          <button type="button" class="project-button send">
-            Get in Touch
-          </button>
+          <a href="#">
+            <button type="button" class="project-button send">
+              Get in Touch
+            </button>
+          </a>
         </section>
       </section>
     </main>
