Correct linter errors

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               alt="My first project snapshot"
             />
           </section>
-          <h1 class="project-name">Tonic</h1>
+          <h2 class="project-name">Tonic</h2>
           <ul class="project-year">
             <li class="canopy">CANOPY</li>
             <li class="dot"></li>
@@ -91,9 +91,7 @@
             <li>CSS</li>
             <li>JavaScript</li>
           </ul>
-          <a href="#">
             <button type="button" class="project-button">See Project</button>
-          </a>
         </section>
       </section>
 
@@ -105,7 +103,7 @@
               alt="My first project snapshot"
             />
           </section>
-          <h1 class="project-name">Multi-Post Stories</h1>
+          <h2 class="project-name">Multi-Post Stories</h2>
           <ul class="project-year">
             <li class="canopy">CANOPY</li>
             <li class="dot"></li>
@@ -121,12 +119,9 @@
           </section>
           <ul class="project-technologies">
             <li>HTML</li>
-            <li>CSS</span>
+            <li>CSS</li>
             <li>JavaScript</li>
           </ul>
-          <a href="#">
-            <button type="button" class="project-button">See Project</button>
-          </a>
         </section>
       </section>
 
@@ -138,7 +133,7 @@
               alt="My first project snapshot"
             />
           </section>
-          <h1 class="project-name">Tonic</h1>
+          <h2 class="project-name">Tonic</h2>
           <ul class="project-year">
             <li class="canopy">CANOPY</li>
             <li class="dot"></li>
@@ -157,9 +152,7 @@
             <li>CSS</li>
             <li>JavaScript</li>
           </ul>
-          <a href="#">
             <button type="button" class="project-button">See Project</button>
-          </a>
         </section>
       </section>
 
@@ -171,9 +164,9 @@
               alt="My first project snapshot"
             />
           </section>
-          <h1 class="project-name">Multi-Post Stories</h1>
+          <h2 class="project-name">Multi-Post Stories</h2>
           <ul class="project-year">
-            <li class="canopy">CANOPY</sliplian>
+            <li class="canopy">CANOPY</li>
             <li class="dot"></li>
             <li class="role">Back End Dev</li>
             <li class="dot"></li>
@@ -190,9 +183,7 @@
             <li>CSS</li>
             <li>JavaScript</li>
           </ul>
-          <a href="#">
             <button type="button" class="project-button">See Project</button>
-          </a>
         </section>
       </section>
 
@@ -214,9 +205,7 @@
             <li><i class="fab fa-medium-m"></i></li>
           </ul>
         </section>
-        <a href="#">
           <button class="project-button" type="button">Get my resume</button>
-        </a>
 
         <ul class="tech-stacks">
           <li class="langs-frames-skills">
@@ -280,11 +269,9 @@
           <textarea name="message" id="msg" cols="30" rows="10" class="msg">
 Write your message here</textarea
           >
-          <a href="#">
             <button type="button" class="project-button send">
               Get in Touch
             </button>
-          </a>
         </section>
       </section>
     </main>
