Add form requirements, minor style fix

--- a/index.html
+++ b/index.html
@@ -261,15 +261,15 @@
             to help with it
           </p>
           <form action="https://formspree.io/f/xyyldewl" method="POST">
-            <input type="text" maxlength="30" class="name" name="name" placeholder="Name" />
+            <input type="text" maxlength="30" class="name" name="name" placeholder="Name" required />
             <input
               type="email"
               class="email"
               name="email"
               placeholder="Email"
+              required
             />
-            <textarea maxlength="500" name="message" id="msg" cols="30" rows="10" class="msg">
-  Write your message here</textarea
+            <textarea maxlength="500" name="message" id="msg" cols="20" rows="7" class="msg" required placeholder="Enter your message here"></textarea
             >
             <button type="submit" class="project-button send">
               Get in Touch
