Increase project-container width

--- a/index.html
+++ b/index.html
@@ -192,73 +192,76 @@
         </section>
       </section>
 
-      <section class="about">
-        <section class="about-intro-section">
-          <p>About<br />Myself</p>
-          <p>
-            Hello I’m a software developer! I can help you build a product ,
-            feature or website Look through some of my work and experience! If
-            you like what you see and have a project you need coded, don’t
-            hestiate to contact me.
-          </p>
-          <p class="connect-about">LET’S CONNECT</p>
-          <ul class="social-container-about">
-            <li><i class="fab fa-github"></i></li>
-            <li><i class="fab fa-linkedin-in"></i></li>
-            <li><i class="fab fa-angellist"></i></li>
-            <li><i class="fab fa-twitter"></i></li>
-            <li><i class="fab fa-medium-m"></i></li>
+      <section class="about-container">
+        <section class="about">
+
+          <section class="about-intro-section">
+            <p>About<br />Myself</p>
+            <p>
+              Hello I’m a software developer! I can help you build a product ,
+              feature or website Look through some of my work and experience! If
+              you like what you see and have a project you need coded, don’t
+              hestiate to contact me.
+            </p>
+            <p class="connect-about">LET’S CONNECT</p>
+            <ul class="social-container-about">
+              <li><i class="fab fa-github"></i></li>
+              <li><i class="fab fa-linkedin-in"></i></li>
+              <li><i class="fab fa-angellist"></i></li>
+              <li><i class="fab fa-twitter"></i></li>
+              <li><i class="fab fa-medium-m"></i></li>
+            </ul>
+            <button class="project-button" type="button">Get my resume</button>
+          </section>
+  
+          <ul class="tech-stacks">
+            <li class="langs-frames-skills">
+              <section class="lang-and-icon">
+                <span>Languages</span>
+                <span><i class="far fa-chevron-down"></i></span>
+              </section>
+  
+              <section class="lang-list">
+                <section class="lang">
+                  <img
+                    src="./assets/images/js.png"
+                    alt="Javascript Logo"
+                    class="lang-logo"
+                  />
+                  <span class="js">JavaScript</span>
+                </section>
+  
+                <section class="lang">
+                  <img
+                    src="./assets/images/html.png"
+                    alt="HTLM Logo"
+                    class="lang-logo"
+                  />
+                  <span class="html">HTML</span>
+                </section>
+  
+                <section class="lang">
+                  <img
+                    src="./assets/images/css.png"
+                    alt="CSS Logo"
+                    class="lang-logo css-logo"
+                  />
+                  <span class="css">CSS</span>
+                </section>
+              </section>
+            </li>
+  
+            <li class="lang-and-icon frames-and-icon">
+              <span class="frame">Frameworks</span>
+              <span><i class="far fa-chevron-right"></i></span>
+            </li>
+  
+            <li class="lang-and-icon skills-and-icon">
+              <span class="skill">Skills</span>
+              <span><i class="far fa-chevron-right"></i></span>
+            </li>
           </ul>
-          <button class="project-button" type="button">Get my resume</button>
         </section>
-
-        <ul class="tech-stacks">
-          <li class="langs-frames-skills">
-            <section class="lang-and-icon">
-              <span>Languages</span>
-              <span><i class="far fa-chevron-down"></i></span>
-            </section>
-
-            <section class="lang-list">
-              <section class="lang">
-                <img
-                  src="./assets/images/js.png"
-                  alt="Javascript Logo"
-                  class="lang-logo"
-                />
-                <span class="js">JavaScript</span>
-              </section>
-
-              <section class="lang">
-                <img
-                  src="./assets/images/html.png"
-                  alt="HTLM Logo"
-                  class="lang-logo"
-                />
-                <span class="html">HTML</span>
-              </section>
-
-              <section class="lang">
-                <img
-                  src="./assets/images/css.png"
-                  alt="CSS Logo"
-                  class="lang-logo css-logo"
-                />
-                <span class="css">CSS</span>
-              </section>
-            </section>
-          </li>
-
-          <li class="lang-and-icon frames-and-icon">
-            <span class="frame">Frameworks</span>
-            <span><i class="far fa-chevron-right"></i></span>
-          </li>
-
-          <li class="lang-and-icon skills-and-icon">
-            <span class="skill">Skills</span>
-            <span><i class="far fa-chevron-right"></i></span>
-          </li>
-        </ul>
       </section>
 
       <section class="contact-wrapper">
