Add changes from peer-to-peer review

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
             <p class="logo-box"><a href="#">My Logo</a></p>
             <span class="menu-icon"><i class="fas fa-bars"></i></span>
             <ul class="menu">
-              <li class="menu-item">Portfolio</li>
-              <li class="menu-item">About</li>
-              <li class="menu-item">Contact</li>
+              <li class="menu-item"><a href="#projects">Portfolio</a></li>
+              <li class="menu-item"><a href="#about">About</a></li>
+              <li class="menu-item"><a href="#contact">Contact</a></li>
             </ul>
           </nav>
         </section>
@@ -52,17 +52,17 @@
             </p>
             <p class="connect">LET’S CONNECT</p>
             <ul class="social-container">
-              <li><i class="fab fa-twitter"></i></li>
-              <li><i class="fab fa-linkedin-in"></i></li>
-              <li><i class="fab fa-medium-m"></i></li>
-              <li><i class="fab fa-github"></i></li>
-              <li><i class="fab fa-angellist"></i></li>
+              <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+              <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+              <li><a href="#"><i class="fab fa-medium-m"></i></a></li>
+              <li><a href="#"><i class="fab fa-github"></i></a></li>
+              <li><a href="#"><i class="fab fa-angellist"></i></a></li>
             </ul>
           </section>
         </section>
       </section>
 
-      <section class="projects">
+      <section id="projects" class="projects">
         <section class="project project1">
           <section class="project-image">
             <img
@@ -193,10 +193,10 @@
       </section>
 
       <section class="about-container">
-        <section class="about">
+        <section id="about" class="about">
 
           <section class="about-intro-section">
-            <p>About<br />Myself</p>
+            <p>About Myself</p>
             <p>
               Hello I’m a software developer! I can help you build a product ,
               feature or website Look through some of my work and experience! If
@@ -265,7 +265,7 @@
       </section>
 
       <section class="contact-wrapper">
-        <section class="contact">
+        <section id="contact" class="contact">
           <p>Contact me</p>
           <p>
             If you have an application you are interested in developing, a
